--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Diligent-Citizen",
+  "name": "diligentcitizen",
   "version": "1.0.0",
   "description": "diligent citizen",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "testing",
     "start": "meteor run --settings settings.json",
