--- a/settings.json
+++ b/settings.json
@@ -7,7 +7,8 @@
       "legiscan" : {"key" : "5e92d12f203ca365fbdcdad88418e626"},
       "sunlight" : {"apikey" : "345a8f0b36114bde89222326b8b1e1af"},
       "openfec" : {"api_key" : "VlzCNbEgjbxSxKTDHgET4DWnZdVuVaOB3SkI2C3I"},
-      "opensecrets" : {"key" : "08d7cd3a8000d7e4a48517a963eaf0d2"}
+      "opensecrets" : {"key" : "08d7cd3a8000d7e4a48517a963eaf0d2"},
+      "nytimes" : {"key" : "557b2bfde68793e7d49ca5a2daf77602:14:28561524"}      
     }
   }
 }
