--- a/.bithoundrc
+++ b/.bithoundrc
@@ -43,7 +43,9 @@
     "**/extjs/src/**",
     "**/extjs/welcome/**",
     "bower_components/**",
-    "**/packages/**"
+    "**/packages/**",
+    "**/public/js/**",
+    
   ],
   "test": [
     "**/test/**",
